# 7-Wonders

./: .gitignore  CMakeLists.txt  Carte.cpp  Carte.h  Cartes.json  Disposition_des_cartes.c  GameManager.cpp  GameManager.h  Instanciations.cpp  Joueur.cpp  Joueur.h  Plateau.cpp  Plateau.h  README.md  TODO.txt  Type.h  carte.cpp  carte.h  cartes_commerce.json  cartes_scientifiques.json  classes.cpp  classes.h  joueur.cpp  joueur.h  layout.cpp  main.cpp  main.h
Assets/: Cartes.json
Game/: Cards.cpp  Cards.h  Carte.cpp  Carte.h  GameManager.cpp  GameManager.h  Joueur.cpp  Joueur.h  Plateau.cpp  Plateau.h  Type.h
Tests/: CarteTest.cpp
